Added in Bootstrap Modal for Actionable Resources

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -29,6 +29,7 @@ h3 {
 
 #masthead {
       background-color: #781615 !important;
+      padding: 0 0.5rem 0;
  }
 
 #masthead .navbar-toggler {
@@ -53,7 +54,8 @@ h3 {
 }
  
  #content {
-      padding-top: 24px; 
+      padding-top: 40px; 
+      margin-bottom: 15px;
  }
 
 #homepage-header {
